<resources>
    <string name="app_name">BrewChat</string>
    <string name="action_settings">Settings</string>
    <string name="brew_chat_title">Brew \nChat</string>
    <string name="title_activity_chat_manager">ChatManagerActivity</string>

<!-- General String -->
    <string name="cancel_button_text">Cancel</string>
    <string name="create_button_text">Create</string>

<!-- Registration Strings -->
    <string name="register_button_text">Register</string>
    <string name="register_header_string">Register new account</string>
    <string name="register_username_hint">Enter new username</string>
    <string name="register_password_hint">Enter password</string>
    <string name="register_confirm_password_hint">Confirm password</string>
    <string name="account_created_toast">Account Created!</string>

<!-- Login/Logout Strings-->
    <string name="logout_confirm_alert">Are you sure you want to Logout ?</string>
    <string name="logout_title_alert">Logout</string>
    <string name="login_error_toast">Error in logging in</string>
    <string name="username_hint_string">Username</string>
    <string name="password_hint_string">Password</string>
    <string name="login_string">Login</string>

<!-- Chat Group String -->
    <string name="create_chat_header">Create Chat Group</string>
    <string name="title_activity_group_chat">GroupChatActivity</string>
    <string name="create_group_name_hint">Enter new group name</string>
    <string name="create_group_add_users_hint">Add users</string>
    <string name="chat_created_toast">New Group Chat Created</string>
    <string name="chat_enter_chat_string">Enter Chat Here</string>
    <string name="add_group_chat_menu_button_title">Add Group Chat</string>
    <string name="create_chat_error_toast">Error creating chat group</string>

    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="contacts">Contacts</string>
    <string name="logout">Logout</string>

    <string name="title_activity_contacts">Contacts</string>

<!-- Fake Strings -->
    <string name="fake_chat_service">Fake chat service</string>
    <string name="fake_chat_service_off">Fake Service OFF</string>
    <string name="fake_chat_service_on">Fake Service ON </string>
    <string name="remember_login">Remember login</string>

</resources>
