<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:text="@string/register_header_string"
        android:id="@+id/register_header"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_user_enter_username"
        android:hint="@string/register_username_hint"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/register_header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_user_enter_password"
        android:inputType="textPassword"
        android:hint="@string/register_password_hint"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/register_user_enter_username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_user_confirm_password"
        android:hint="@string/register_confirm_password_hint"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/register_user_enter_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancel_register_button"
        android:text="@string/cancel_button_text"
        android:layout_below="@+id/register_user_confirm_password"
        android:layout_toLeftOf="@+id/create_account_dialog_button"
        android:layout_toStartOf="@+id/create_account_dialog_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_button_text"
        android:id="@+id/create_account_dialog_button"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/register_user_confirm_password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="102dp"
        android:layout_marginEnd="102dp" />


</RelativeLayout>